--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <button
       type="button"
-      onclick="document.getElementById('ex').innerHTML"
+      onclick="document.getElementById('ex').innerHTML
       ="Salut"
       JavaScript!
     >
