--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 
     <button
       type="button"
-      onclick="document.getElementById('ex').innerHTML
-      ="Salut"
-      JavaScript!
-    >
+      onclick='document.getElementById('ex').innerHTML
+      = "Salut JavaScript!"'>
       Tasteaza!
     </button>
   </body>
