--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Initiere in JavaScript</title>
-  </head>
   <body>
-    <p id="ex">Schimbarea continutului HTML cu JavaScript</p>
+    <h2>JS</h2>
+
+    <p id="ex">JavaScript schimbare continut.</p>
 
     <button
       type="button"
-      onclick='document.getElementById('ex').innerHTML
-      = "Salut JavaScript!"'>
-      Tasteaza!
+      onclick='document.getElementById("ex").innerHTML = "Salut JavaScript!"'
+    >
+      Tasteaza aici!
     </button>
   </body>
 </html>
